[tool.poetry]
name = "group-stats-tele-bot"
version = "0.1.0"
description = ""
authors = ["ShavonTan <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "^4.2.2"
matplotlib = "^3.5.1"
replit = "^3.2.4"
pandas = "^1.3.5"
squarify = "^0.4.3"
wordcloud = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
